--- a/Pkmds.Rcl/Components/Charts/StatChart.razor
+++ b/Pkmds.Rcl/Components/Charts/StatChart.razor
@@ -1,18 +1,7 @@
-﻿@if (Data is { Length: > 0 })
+﻿@if (Data is { Count: > 0 })
 {
     <RadarChart Id="pokemonDetailsStatsChart"
                 Data="@Data"
-                Labels="@Labels"
-                BackgroundColor="@BackgroundColor"
-                BeginAtZero="@true"
-                Min="0"
-                Max="650"
-                StepSize="100"
-                DisplayAngleLines="@true"
-                DisplayTicks="@false"
-                MaxTicksLimit="5"
-                TicksMin="0"
-                TicksMax="3"
-                MajorTicksEnabled="@false">
+                Labels="@Labels">
     </RadarChart>
 }
